<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.angeloorrico.myappportfolio.MainActivity"
    android:background="#EEEEEE">

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="19sp"
        android:textColor="#5C6871"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_main_title">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <Button
                android:id="@+id/bt_popular_movies"
                style="@style/MainButton"
                android:text="@string/app_popular_movies"
                android:onClick="openApp"/>
            <Button
                android:id="@+id/bt_stock_hawk"
                style="@style/MainButton"
                android:text="@string/app_stock_hawk"
                android:onClick="openApp"/>
            <Button
                android:id="@+id/bt_build_it_bigger"
                style="@style/MainButton"
                android:text="@string/app_build_it_bigger"
                android:onClick="openApp"/>
            <Button
                android:id="@+id/bt_make_your_app_material"
                style="@style/MainButton"
                android:text="@string/app_make_your_app_material"
                android:onClick="openApp"/>
            <Button
                android:id="@+id/bt_go_ubiquitous"
                style="@style/MainButton"
                android:text="@string/app_go_ubiquitous"
                android:onClick="openApp"/>
            <Button
                android:id="@+id/bt_capstone"
                style="@style/MainButton"
                android:text="@string/app_capstone"
                android:onClick="openApp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
